syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyOuterClass";
option objc_class_prefix = "HLW";

package br.com.zup;
import "google/protobuf/timestamp.proto";

service KeyManagerRegistraService {
  rpc cadastrar(RegistraChavePixRequest) returns (RegistraChavePixResponse){}
}

service KeyManagerRemoveService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}

service KeyManagerConsultaService {
  rpc consulta(ConsultaChavePixRequest) returns (ConsultaChavePixResponse){}
}

service KeyManagerListaService {
  rpc lista(ListaChavesPixRequest) returns (ListaChavesPixResponse){}
}

enum TipoChave{
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest{
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse{
  string pixId = 1;
}

message RemoveChavePixRequest{
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse{
  string pixId = 1;
}

message ConsultaChavePixRequest{

  message FiltroPorPixId{
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro{
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message ConsultaChavePixResponse{

  message ChavePix{

    message ContaInfo {
      TipoConta tipo = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoChave tipo = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

message ListaChavesPixRequest{
  string clienteId = 1;
}

message ListaChavesPixResponse{

  message ChavePix{

    string PixId = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId = 1;
  repeated ChavePix chaves = 2;
}
